[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/MissionController.gd" type="Script" id=1]
[ext_resource path="res://Resources/UI/MainPanel02.png" type="Texture" id=2]
[ext_resource path="res://MissionScene/EnemyCharacter.tscn" type="PackedScene" id=3]
[ext_resource path="res://BubbleText/BubbleTextGenerator.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/Fonts/LevelSelectionFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Resources/Fonts/stanberry/Stanberry.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Resources/Fonts/MenuButtonFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://MissionScene/CrewSelection.tscn" type="PackedScene" id=8]
[ext_resource path="res://MissionScene/BobTheFireworksNode.tscn" type="PackedScene" id=9]
[ext_resource path="res://MissionScene/CrewCharacter.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 1
outline_color = Color( 0.886275, 0.858824, 0, 1 )
font_data = ExtResource( 6 )

[node name="MissionController" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
color = Color( 0.2, 0.215686, 0.278431, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BubbleTextGenerator" parent="." instance=ExtResource( 4 )]
z_index = 5

[node name="MissionScreen" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="MissionScreen"]
margin_right = 1280.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
max_value = 10.0
percent_visible = false

[node name="LayoutH" type="HBoxContainer" parent="MissionScreen"]
margin_top = 54.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="DetailMenu" type="NinePatchRect" parent="MissionScreen/LayoutH"]
margin_right = 385.0
margin_bottom = 666.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.65
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 302, 403 )
patch_margin_left = 50
patch_margin_top = 50
patch_margin_right = 50
patch_margin_bottom = 50
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Layout" type="VBoxContainer" parent="MissionScreen/LayoutH/DetailMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 30.0
margin_right = -20.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MissionScreen/LayoutH/DetailMenu/Layout"]
margin_right = 345.0
margin_bottom = 403.0
custom_fonts/font = ExtResource( 5 )
text = "Lkodfodfd : adadfadaf

Fararar : dafaaaafaf

Farrfafmfafdfodfkdf fdlkskdf dflks;flksd;fk;k  asdadadadasdasd
fdfsdfsf dsdadadadada dasdasdasd
fsdfsfljkjsfldlkfjlskdjflsdfjoeofw
flsdfds;lfjlfdfm.anfal'dff'an'l
fdaldf;aldfnalkdf'a fladjfladjlkf/s"
autowrap = true

[node name="Recall" type="Button" parent="MissionScreen/LayoutH/DetailMenu"]
margin_left = 48.0
margin_top = 546.0
margin_right = 186.0
margin_bottom = 566.0
rect_scale = Vector2( 2, 2 )
text = "EMERGENCY RECALL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="MissionScreen/LayoutH"]
margin_left = 389.0
margin_right = 1280.0
margin_bottom = 666.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
expand = true
stretch_mode = 1

[node name="Layout" type="HBoxContainer" parent="MissionScreen/LayoutH/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crew" type="VBoxContainer" parent="MissionScreen/LayoutH/Background/Layout"]
margin_right = 375.0
margin_bottom = 666.0
size_flags_horizontal = 3

[node name="Character1" parent="MissionScreen/LayoutH/Background/Layout/Crew" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 123.0
margin_top = 45.0
margin_right = 251.0
margin_bottom = 173.0

[node name="Character2" parent="MissionScreen/LayoutH/Background/Layout/Crew" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 123.0
margin_top = 268.0
margin_right = 251.0
margin_bottom = 396.0

[node name="Character3" parent="MissionScreen/LayoutH/Background/Layout/Crew" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 123.0
margin_top = 492.0
margin_right = 251.0
margin_bottom = 620.0

[node name="It\'sFreeRealEstate" type="Control" parent="MissionScreen/LayoutH/Background/Layout"]
margin_left = 379.0
margin_right = 511.0
margin_bottom = 666.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35

[node name="Badies" type="VBoxContainer" parent="MissionScreen/LayoutH/Background/Layout"]
margin_left = 515.0
margin_right = 891.0
margin_bottom = 666.0
size_flags_horizontal = 3

[node name="Character1" parent="MissionScreen/LayoutH/Background/Layout/Badies" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_top = 45.0
margin_right = 252.0
margin_bottom = 173.0
isAlive = false

[node name="Character2" parent="MissionScreen/LayoutH/Background/Layout/Badies" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_top = 268.0
margin_right = 252.0
margin_bottom = 396.0
isAlive = false

[node name="Character3" parent="MissionScreen/LayoutH/Background/Layout/Badies" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 124.0
margin_top = 492.0
margin_right = 252.0
margin_bottom = 620.0
isAlive = false

[node name="EncounterTimer" type="Timer" parent="MissionScreen"]
wait_time = 12.0

[node name="BobTheFireworksNode" parent="." instance=ExtResource( 9 )]
z_index = 4

[node name="CrewSelection" parent="." instance=ExtResource( 8 )]
visible = false

[node name="WinScreen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
color = Color( 0.0235294, 0.152941, 0.282353, 1 )

[node name="Label" type="Label" parent="WinScreen"]
margin_left = 328.0
margin_top = 96.0
margin_right = 554.0
margin_bottom = 122.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 1 )
text = "MISSION COMPLETE"

[node name="Button" type="Button" parent="WinScreen"]
margin_left = 472.0
margin_top = 304.0
margin_right = 842.0
margin_bottom = 360.0
custom_fonts/font = ExtResource( 7 )
text = "RETURN TO SHIP"

[node name="AbortScreen" type="ColorRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1280, 720 )
color = Color( 0.203922, 0.701961, 0.607843, 1 )

[node name="Label2" type="Label" parent="AbortScreen"]
anchor_right = 1.0
margin_right = -853.0
margin_bottom = 109.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 1 )
text = "you have evacuated the team"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Abort" type="Button" parent="AbortScreen"]
margin_left = 472.0
margin_top = 304.0
margin_right = 842.0
margin_bottom = 360.0
custom_fonts/font = ExtResource( 7 )
text = "RETURN TO SHIP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseScreen" type="ColorRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1280, 720 )
color = Color( 0, 0, 0, 1 )

[node name="RichTextLabel" type="Label" parent="LoseScreen"]
margin_left = 280.0
margin_top = 200.0
margin_right = 449.0
margin_bottom = 240.0
rect_scale = Vector2( 4, 4 )
text = "EVERYONE DIED - THE END"

[node name="GameOver" type="Button" parent="LoseScreen"]
margin_left = 456.0
margin_top = 408.0
margin_right = 582.0
margin_bottom = 428.0
rect_scale = Vector2( 3, 3 )
text = "START NEW GAME"

[node name="FireworksTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="visibility_changed" from="." to="." method="_on_MissionController_visibility_changed"]
[connection signal="pressed" from="MissionScreen/LayoutH/DetailMenu/Recall" to="." method="_on_Recall_pressed"]
[connection signal="timeout" from="MissionScreen/EncounterTimer" to="." method="_on_EncounterTimer_timeout"]
[connection signal="pressed" from="WinScreen/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="AbortScreen/Abort" to="." method="_on_Abort_pressed"]
[connection signal="pressed" from="LoseScreen/GameOver" to="." method="_on_GameOver_pressed"]
[connection signal="timeout" from="FireworksTimer" to="." method="_on_FireworksTimer_timeout"]
